# RayTracing

./: .gitignore  CMakeLists.txt  Makefile  Sphere.cpp  Sphere.h  main.cpp  readme.txt  scenes.cpp  vector.cpp
classes/: Color.cpp  Color.h  Material.cpp  Material.h  Picture.cpp  Picture.h  Ray.cpp  Ray.h
computations/: physics.cpp  vector.cpp
objects/: Figure.cpp  Figure.h  Light.cpp  Light.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h
utils/: constants.cpp  files.cpp  files.h
